...
    const val SelectionActionBar = "selection_action_bar"
    const val PageIndicatorItemPrefix = "page_indicator_item_"
    const val DetailSkeleton = "detail_skeleton"
    const val TagItem = "tag_item"
    const val BookmarkAlertDialog = "bookmark_alert_dialog"
    const val LoginButton = "login_button"
    const val LoginLoadingIndicator = "login_loading_indicator"
    const val SettingScreen = "setting_screen"
    const val SettingLanguage = "setting_language"
    const val SettingDeleteAccount = "setting_delete_account"
    const val FeedbackScreen = "feedback_screen"
    const val FeedbackInput = "feedback_input"
    const val FeedbackSubmit = "feedback_submit"
...
